@@ -4,6 +4,12 @@
 p4a.plonecalendar Changes
 =========================
 
+p4a.plonecalendar 2.0a? (xxxx-xx-xx)
+====================================
+
+* Fixed an issue where a recurring event would show up in TopicEventProvider
+  results no matter what the criteria on the topic were. (claytron)
+
 p4a.plonecalendar 2.0a2 (2008-10-04)
 ====================================
 
